updated resource path

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 env:
   # Region required, and Bypass credential lookup
-  - AWS_DEFAULT_REGION="us-east-1" AWS_ACCESS_KEY_ID="some" AWS_SECRET_ACCESS_KEY="thing"
+  - AWS_DEFAULT_REGION="us-west-2" AWS_ACCESS_KEY_ID="some" AWS_SECRET_ACCESS_KEY="thing"
 python:
   - "2.7"
   - "pypy"
